--- a/seller-application_status.html
+++ b/seller-application_status.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <div class = "sidebar">
-            <div class = "logo-details">  <!--logo-->
+            <div class = "logo-details">  
                 <i class = "bx bxl-baidu"></i>
             </div>
-            <div class = "profile-details"><!-- account profile-->
+            <div class = "profile-details">
                 <div class = "profile-content">
                     <img src = "Assets/Image/profile_pic.jpg" alt = "profile">
                 </div>
@@ -25,4 +25,63 @@
                 <span class = "text">Application Status</span>
             </nav>
         </section>
-        
+        <div class = "text-details">
+            <h1>Application Submissions</h1>
+        </div>
+        <div class = "user-details1">
+            <div class = "logo1">
+                <img src = "Assets/Image/homer.png" alt = "user1">
+            </div>
+            <div class = "name1">
+                <ul>
+                    <li><a href = "#">Name: Homer</a></li>
+                    <li><a href = "#">Animal: Dog</a></li>
+                    <li><a href = "#">Submission Date: 5.Feb.2024</a></li>
+                </ul>
+            </div>
+            <div class = "button1">
+                <form>
+                    <button class = "aprrove1">Approve</button>
+                    <button class = "reject1">Reject</button>
+                </form>
+            </div>
+        </div>
+        <div class = "user-details2">
+            <div class = "logo2">
+                <img src = "Assets/Image/bart-.png" alt = "user2">
+            </div>
+            <div class = "name2">
+                <ul>
+                    <li><a href = "#">Name: Bart</a></li>
+                    <li><a href = "#">Animal: Cat</a></li>
+                    <li><a href = "#">Submission Date: 1.Jan.2024</a></li>
+                </ul>
+            </div>
+            <div class = "button2">
+                <form>
+                    <button class = "approve2">Approve</button>
+                        <i class='bx bx-check-circle'></i>
+                    
+                </form>
+            </div>
+        </div>
+        <div class = "user-details3">
+            <div class = "logo3">
+                <img src = "Assets/Image/lisa.png" alt = "user3">
+            </div>
+            <div class = "name3">
+                <ul>
+                    <li><a href = "#">Name: Lisa</a></li>
+                    <li><a href = "#">Animal: Rabbit</a></li>
+                    <li><a href = "#">Submission Date: 3.Mar.2024</a></li>
+                </ul>
+            </div>
+            <div class = "button3">
+                <form>
+                    <button class = "reject2">Reject</button>
+                    <i class='bx bx-x-circle'></i>
+                </form>
+        </div>
+    </div>
+</body>
+</html>
