--- a/productlist.html
+++ b/productlist.html
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li>
-                    <a href="#">
+                    <a href="productlist.html">
                         <i class='bx bx-grid-alt'></i>
                         <span class="link_name">Dashboard</span>
                     </a>
@@ -27,50 +27,49 @@
                 </li>
                 <li>
                     <div class="icon_link">
-                        <a href="#">
-                            <i class='bx bx-search-alt-2' ></i>
-                            <span class="link_name">Search</span>
+                        <a href="seller-application_status.html">
+                            <i class='bx bx-edit-alt'></i>
+                            <span class="link_name">Status</span>
                         </a>
-                        <i class='bx bxs-chevron-down arrow' ></i>
                     </div>
-                    <ul class="sub-menu">
+                    <!-- <ul class="sub-menu">
                         <li><a class="link_name" href="#">Search</a></li>
                         <li><a href="#">Dogs</a></li>
                         <li><a href="#">Cats</a></li>
                         <li><a href="#">Birds</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li>
                     <div class="icon_link">
-                        <a href="#">
-                            <i class='bx bx-home-heart' ></i>
-                            <span class="link_name">Adoption</span>
+                        <a href="newlisting.html">
+                            <i class='bx bx-list-plus'></i>
+                            <span class="link_name">New Listing</span>
                         </a>
-                        <i class='bx bxs-chevron-down arrow' ></i>
+                        <!-- <i class='bx bxs-chevron-down arrow' ></i> -->
                     </div>
-                    <ul class="sub-menu">
+                    <!-- <ul class="sub-menu">
                         <li><a class="link_name" href="#">Adoption</a></li>
                         <li><a href="#">Dogs</a></li>
                         <li><a href="#">Cats</a></li>
                         <li><a href="#">Birds</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li>
                     <div class="icon_link">
-                        <a href="#">
-                            <i class='bx bx-plug' ></i>
-                            <span class="link_name">Rescue</span>
+                        <a href="setup.html">
+                            <i class='bx bx-cog' ></i>
+                            <span class="link_name">Set Up Shop</span>
                         </a>
-                        <i class='bx bxs-chevron-down arrow' ></i>
+                        <!-- <i class='bx bxs-chevron-down arrow' ></i> -->
                     </div>
-                    <ul class="sub-menu">
+                    <!-- <ul class="sub-menu">
                         <li><a class="link_name" href="#">Rescue</a></li>
                         <li><a href="#">Call</a></li>
                         <li><a href="#">Chat</a></li>
                         <li><a href="#">Email</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#">
                         <i class='bx bx-compass' ></i>
                         <span class="link_name">Service</span>
@@ -100,7 +99,7 @@
                         
                     </ul>
                 </li>
-                <li>
+                <li> -->
                     <div class="profile-details">
                         <div class="profile-content">
                             <img src="Assets/Image/Profile.webp" alt="Profile">
@@ -146,10 +145,11 @@
                 </button>
                 <div class = "form-popup" id = "myForm">
                     <form  class = "form-container">
-                        <button type = "submit" class = "more_info">More Info</button>
+                        <button type = "button" class = "more_info" onclick="window.location.href='productprofile.html'">More Info</button>
                         <button type = "submit" class = "delete">Delete</button>
                     </form>
                 </div>
+                
             </div><br>
             <hr>
         <script src = "Assets/JS/script.js"></script>
