--- a/setup.html
+++ b/setup.html
@@ -117,51 +117,41 @@
         <section class="home-section">
             <nav class="home-content">
                 <i class="bx bx-menu"></i>
-                <span class="text">Product Profile</span>
+                <span class="text">Set Up Shop</span>
             </nav>
-            <div class = "product_detail">
-                <img src = "Assets/Image/Samoyed (1).jpg" alt = "Samoyed">
-                <div class = "product_info">
-                    <h2>Samoyed Available for Sale!!!</h2>
-                    <ul>
-                        <li><a href = "#">Name: Chu Chu</a></li>
-                        <li><a href = "#">Breed: Samoyed</a></li>
-                        <li><a href = "#">Listing_id: 123434555</a></li>
-                        <li><a href = "#">Date of Birth: 17/ 04/ 2023</a></li>
-                        <li><a href = "#">Sex: Male</a></li>
-                        <li><a href = "#">Price: $4000</a></li>
-                        <li><a href = "#">Ready To Leave: Now</a></li>
-                    </ul>
-                </div>
+            <div class = "upload">
+                    <input type = "file" id = "fileInput">
+                        <label for = "fileInput">
+                        <i class='bx bx-upload' ></i><br>
+                        <a>Upload File</a>
+                        <div class = "upload-detail">
+                            <input type = "text" placeholder="Shop Name" class = "shop-name">
+                            <input type = "text" placeholder = "Price" class = "price">
+                            <input type = "text" placeholder="Shop Location" class = "location">
+                            <input type = "text" placeholder = "E-Mail" class = "email">
+                            <input type = "text" placeholder="Phone No" class = "phone-no">
+                            <input type = "text" placeholder="Business Hour" class = "time">
+                        </div>
+                        </label>
+                    
             </div>
-            <div class = "about_product"><hr><br>
-                <h2>About Samoyed</h2>
-                <p>The Samoyed is a substantial but graceful dog standing anywhere from 19 to a bit over 23 inches at the shoulder. Powerful, tireless, with a thick all-white coat impervious to cold, Sammies are perfectly beautiful but highly functional. Even their most delightful feature, a perpetual smile, has a practical function: The upturned corners of the mouth keep Sammies from drooling, preventing icicles from forming on the face. A Sammy sentenced to solitary confinement in the yard is a miserable and destructive creature...</p><br><hr>
+            <div class = "upload-detail2">
+                <input type = "text" placeholder="About the seller" class = "about-seller">
+                <input type = "text" placeholder="Shop Description" class = "shop-description">
             </div>
-            <div class = "product_package">
-                <h2>Puppy Care Package</h2>
-                <form>
-                    <input type = "checkbox">
-                        <a href = "#">Vaccinated</a>
-                    </input>
-                    <input type = "checkbox">
-                        <a href = "#">Dewormed</a>
-                    </input>
-                    <input type = "checkbox">
-                        <a href = "#">Veterinary Checkup Performed</a><br>
-                    </input><br>
-                    <input type = "checkbox">
-                        <a href = "#">Puppy Starter Kit</a>
-                    </input>
-                    <input type = "checkbox">
-                        <a href = "#">Puppy Socialization Started</a>
-                    </input>
-                    <input type = "checkbox">
-                        <a href = "#">AKC DNA Profile Tested</a>
-                    </input>
-                </form>
+            <div class = "upload-detail3">
+                <button class = "type-of-pet">
+                    <p>Types of Pet and Breed Offered</p>
+                    <i class = "bx bx-chevron-down"></i>
+                </button>
             </div>
-        </section>
-        <script src = "Assets/JS/script.js"></script>
-    </body>
-</html>
+            <div class = "upload-detail4">
+                <button class = "health-and-care">
+                    <p>Health and Care Information</p>
+                    <i class = "bx bx-chevron-down"></i>
+                </button>
+            </div>
+        </div>
+
+
+            <script src = "Assets/JS/script.js"></script>
