--- a/newlisting.html
+++ b/newlisting.html
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li>
-                    <a href="productlist.html">
+                    <a href="index.html">
                         <i class='bx bx-grid-alt'></i>
                         <span class="link_name">Dashboard</span>
                     </a>
@@ -27,7 +27,7 @@
                 </li>
                 <li>
                     <div class="icon_link">
-                        <a href="seller-application_status.html">
+                        <a href="app_details.html">
                             <i class='bx bx-edit-alt'></i>
                             <span class="link_name">Status</span>
                         </a>
