--- a/setup.html
+++ b/setup.html
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li>
-                    <a href="productlist.html">
+                    <a href="index.html">
                         <i class='bx bx-grid-alt'></i>
                         <span class="link_name">Dashboard</span>
                     </a>
