--- a/app_status.html
+++ b/app_status.html
@@ -117,7 +117,7 @@
         <section class="home-section">
             <nav class="home-content">
                 <i class="bx bx-menu"></i>
-                <span class="text">Application Details</span>
+                <span class="text">Application Status</span>
             </nav>
             <div class = "app_detail-container">
                 <h2>Application Submissions</h2>
