--- a/productprofile.html
+++ b/productprofile.html
@@ -27,7 +27,7 @@
                 </li>
                 <li>
                     <div class="icon_link">
-                        <a href="app_details.html">
+                        <a href="app_status.html">
                             <i class='bx bx-edit-alt'></i>
                             <span class="link_name">Status</span>
                         </a>
