--- a/app_status.html
+++ b/app_status.html
@@ -121,41 +121,51 @@
             </nav>
             <div class = "app_detail-container">
                 <h2>Application Submissions</h2>
-                <div class = "app_detail-homer">
-                    <img src = "Assets/Image/homer.png" alt = "homer">
-                    <ul>
-                        <li><a href = "#">Name: Homer Simpson</li>
-                        <li><a href = "#">Animal: Dog</a></li>
-                        <li><a href = "#">Submission Date: 08/ Feb/ 2024</a></li>
-                    </ul>
-                    <div class = "homer_button">
-                        <button type = "button" class = "approve1">Approve</button>
-                        <button type = "button" class = "reject1">Reject</button>
+                <div class = "homer-box">
+                    <div class = "app_detail-homer">
+                        <img src = "Assets/Image/homer.png" alt = "homer">
+                        <ul>
+                            <li><a href = "#">Name: Homer</a></li>
+                            <li><a href = "#">Animal: Dog</a></li>
+                            <li><a href = "#">Submission Date: 08/ Feb/ 2024</a></li>
+                        </ul>
+                        <div class = "homer_button">
+                            <button type = "button" class = "approve1">Approve</button>
+                            <button type = "button" class = "reject1">Reject</button>
+                        </div>
                     </div>
                 </div>
-                <div class = "app_detail-bart">
-                    <img src = "Assets/Image/bart-.png" alt = "bart">
-                    <ul>
-                        <li><a href = "#">Name: Bart Simpson</a></li>
-                        <li><a href = "#">Animal: Cat</a></li>
-                        <li><a href = "#">Submission Date: 01/ Jan/ 2024</a></li>
-                    </ul>
-                    <div class = "bart_button">
-                        <button type = "button" class = "approve2">Approve</button>
-                        <button type = "button" class = "reject2">Reject</button>
+                <div class = "bart-box">
+                    <div class = "app_detail-bart">
+                        <img src = "Assets/Image/bart-.png" alt = "bart">
+                        <ul>
+                            <li><a href = "#">Name: Bart Simpson</a></li>
+                            <li><a href = "#">Animal: Cat</a></li>
+                            <li><a href = "#">Submission Date: 01/ Jan/ 2024</a></li>
+                        </ul>
+                        <div class = "bart_button">
+                            <button type = "button" class = "approve2" onclick = "window.location.href = 'application_details.html'">Approve</button>
+                            <button type = "button" class = "reject2">Reject</button>
+                        </div>
                     </div>
                 </div>
-                <div class = "app_detail-lisa">
-                    <img src = "Assets/Image/lisa.png" alt = "lisa">
-                    <ul>
-                        <li><a href = "#">Name: Lisa Simpson</a></li>
-                        <li><a href = "#">Animal: Bird</a></li>
-                        <li><a href = "#">Submission Date: 12/ Dec/ 2023</a></li>
-                    </ul>
-                    <div class = "lisa_button">
-                        <button type = "button" class = "approve3">Approve</button>
-                        <button type = "button" class = "reject3">Reject</button>
+                <div class = "lisa-box">
+                    <div class = "app_detail-lisa">
+                        <img src = "Assets/Image/lisa.png" alt = "lisa">
+                        <ul>
+                            <li><a href = "#">Name: Lisa Simpson</a></li>
+                            <li><a href = "#">Animal: Bird</a></li>
+                            <li><a href = "#">Submission Date: 12/ Dec/ 2023</a></li>
+                        </ul>
+                        <div class = "lisa_button">
+                            <button type = "button" class = "approve3">Approve</button>
+                            <button type = "button" class = "reject3">Reject</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <script src = "Assets/JS/script.js"></script>
+    </body>
+</html>
+        
