--- a/productprofile.html
+++ b/productprofile.html
@@ -144,20 +144,20 @@
                     <input type = "checkbox">
                         <a href = "#">Vaccinated</a>
                     </input>
-                    <input type = "checkbox">
-                        <a href = "#">Dewormed</a>
+                    <input type = "checkbox"class = "dewormed">
+                        <a href = "#" class = "dewormed">Dewormed</a>
                     </input>
-                    <input type = "checkbox">
-                        <a href = "#">Veterinary Checkup Performed</a><br>
+                    <input type = "checkbox" class = "checkup">
+                        <a href = "#" class = "checkup">Veterinary Checkup Performed</a><br>
                     </input><br>
                     <input type = "checkbox">
-                        <a href = "#">Puppy Starter Kit</a>
+                        <a href = "#" class = "kit">Puppy Starter Kit</a>
                     </input>
                     <input type = "checkbox">
-                        <a href = "#">Puppy Socialization Started</a>
+                        <a href = "#"class = "social">Puppy Socialization Started</a>
                     </input>
                     <input type = "checkbox">
-                        <a href = "#">AKC DNA Profile Tested</a>
+                        <a href = "#"class = "dna">AKC DNA Profile Tested</a>
                     </input>
                 </form>
             </div>
