--- a/index.html
+++ b/index.html
@@ -122,15 +122,34 @@
             <div class = "search">
                 <form>
                     <input type = "text" placeholder = "Search"name = "searchbar">
-                    <button type = "submit">
+                    <!-- <button type = "submit">
                         <i class='bx bx-search'></i>
                     </button>
                     <button type = "submit">
                         <i class='bx bx-list-ul' ></i>
-                    </button>
+                    </button> -->
                 </form>
             </div>
-            <hr>
+            <div class = "samoyed-box">
+                <div class = "samoyed-container">
+                    <img src = "Assets/Image/Samoyed (1).jpg" alt = "Samoyed">
+                    <ul>
+                        <li><a href = "#">Name: Chu Chu</a></li>
+                        <li><a href = "#">Breed: Samoyed</a></li>
+                        <li><a href = "#">Listing_id 123434555</a></li>
+                    </ul>
+                    <button class = "open" onclick = "openForm()">
+                        <i class='bx bx-dots-vertical-rounded'></i>
+                    </button>
+                    <div class = "form-popup" id = "myForm">
+                        <form  class = "form-container">
+                            <button type = "button" class = "more_info" onclick="window.location.href='productprofile.html'">More Info</button>
+                            <button type = "submit" class = "delete">Delete</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- <hr>
             <h2>Dog</h2>
             <div class = "details">
                 
@@ -151,7 +170,7 @@
                 </div>
                 
             </div><br>
-            <hr>
+            <hr> -->
         <script src = "Assets/JS/script.js"></script>
     </body>
 </html>
