--- a/newlisting.html
+++ b/newlisting.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Seller | Pawsitive</title>
-        <link rel="stylesheet" href="Assets/CSS/style.css">
+        <link rel="stylesheet" href="Assets/CSS/newlisting.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
