--- a/productprofile.html
+++ b/productprofile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="UTF-8">
+        <meta name = "viewport" content = "width=device-width, initial-scale = 1.0" charset="UTF-8">
         <title>Seller | Pawsitive</title>
         <link rel="stylesheet" href="Assets/CSS/style.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
