--- a/rescuer_create.html
+++ b/rescuer_create.html
@@ -189,7 +189,7 @@
                                         <a href = "#" class = "leg1">Leg Broken</a>
                                     </input>
                                     <input type = "checkbox" class = "idiot">
-                                        <a href = "#" class = "idiiot1">Idiot dog</a>
+                                        <a href = "#" class = "idiot1">Idiot dog</a>
                                     </input>
                                     <input type = "checkbox" class = "other">
                                         <a href = "#" class = "other1">Other</a>
