--- a/newlisting.html
+++ b/newlisting.html
@@ -47,6 +47,15 @@
                         </a>
                         <!-- <i class='bx bxs-chevron-down arrow' ></i> -->
                     </div>
+                </li>
+                <li>
+                    <div class = "icon_link">
+                        <a href = "adoption_user.html">
+                            <i class='bx bxs-dog'></i>
+                            <span class = "link_name">Adoption</span>
+                        </a>
+                    </div>
+                </li>
                     <!-- <ul class="sub-menu">
                         <li><a class="link_name" href="#">Adoption</a></li>
                         <li><a href="#">Dogs</a></li>
