--- a/setup.html
+++ b/setup.html
@@ -56,6 +56,15 @@
                     </ul> -->
                 </li>
                 <li>
+                    <div class = "icon_link">
+                        <a href = "adoption_user.html">
+                            <i class='bx bxs-dog'></i>
+                            <span class = "link_name">Adoption</span>
+                        </a>
+                    </div>
+                   
+                </li>
+                <li>
                     <div class="icon_link">
                         <a href="setup.html">
                             <i class='bx bx-cog' ></i>
