--- a/application_details.html
+++ b/application_details.html
@@ -79,37 +79,36 @@
                 <i class="bx bx-menu"></i>
                 <span class="text">Buyer Information</span>
             </nav>
-        <div class = "user-box"> 
-            <div class = "user-detail">
-                <h3>User Information</h3>
-                <img src = "Assets/Image/bart-.png" alt = "Profile">
-                <div class = "user-info">
-                    <ul>
-                        <li><a href = "#">Name: Bart Simpson</a></li>
-                        <li><a href = "#">Phone No: 09789128172</a></li>
-                        <li><a href = "#">Email: bartsimp03@gmail.com</a></li>
-                        <li><a href = "#">Address: 742 Evergreen Terrace, Springfield</a></li>
-                    </ul>
+            <div class = "user-box">
+                <div class = "user-detail">
+                    <h3 class = "user-head">User Information</h3>
+                    <img src = "Assets/Image/bart-.png">
+                    <div class = "user-info">
+                        <ul>
+                            <li><a href = "#">Name: Bart Simpson</a></li>
+                            <li><a href = "#">Phone No: 09789128172</a></li>
+                            <li><a href = "#">Email: bartsimp03@gmail.com</a></li>
+                            <li><a href = "#">Address: 742 Evergreen Terrace, Springfield</a></li>
+                        </ul>
+                    </div>
+                    <div class = "order-detail">
+                        <h3 class = "order-head">Order Details</h3>
+                        <img src = "Assets/Image/snowball.png">
+                        <div class = "order-info">
+                            <ul>
+                                <li><a href = "#">Name: Snowball</a></li>
+                                <li><a href = "#">Animal type: Cat</a></li>
+                                <li><a href = "#">Breed: Domestic Shorthair</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class = "app-button">
+                        <button class = "confirm">Accept</button>
+                        <button class = "app-cancel">Cancel</button>
+                    </div>
                 </div>
+                
             </div>
-        </div>
-        <div class = "order-box">
-            <div class="order-detail">
-                <h3>Order Details</h3>
-                <img src = "Assets/Image/snowball.png">
-                <div class = "order-info">
-                    <ul>
-                        <li><a href = "#">Name: Snowball</a></li>
-                        <li><a href = "#">Animal type: Cat</a></li>
-                        <li><a href = "#">Breed: Domestic Shorthair</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class = "app-button">
-            <button class = "confirm">Accept</button>
-            <button class = "app-cancel">Cancel</button>
-        </div>
         </section>
         <script src="Assets/JS/script.js"></script>
     </body>
